<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/red"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:orientation="vertical"
            android:layout_weight="2"
            android:layout_marginLeft="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <TableLayout
                android:id="@+id/tableLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >
                    <TextView
                        android:id="@+id/textView1"
                        android:textSize="18dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/accounts" />
                    <EditText
                        android:id="@+id/reg_id_account"
                        android:minWidth="400px"
                        android:inputType="phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </TableRow>
                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">
                    <TextView
                        android:id="@+id/textView2"
                        android:textSize="18dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password" />
                    <EditText
                        android:id="@+id/reg_id_password"
                        android:inputType="textPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </TableRow>
                <TableRow
                    android:id="@+id/tableRow3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">
                    <TextView
                        android:id="@+id/textView3"
                        android:textSize="18dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nickname" />
                    <EditText
                        android:id="@+id/reg_id_name"
                        android:inputType="text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </TableRow>
            </TableLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="158px"
                android:layout_height="150px"
                android:src="@mipmap/ic_launcher" />
            <Button
                android:id="@+id/reg_id_pickphoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_head" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:weightSum="1">
            <TextView
                android:text="@string/gender"
                android:textSize="18dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/reg_id_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </android.support.v7.widget.AppCompatSpinner>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:weightSum="1">
            <TextView
                android:textSize="18dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signal" />
            <EditText
                android:id="@+id/reg_id_motto"
                android:inputType="text"
                android:layout_width="171dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.02" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="40dp">

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:id="@+id/reg_button_back"
            android:textSize="18dp"
            android:textColor="@color/color_text_c7"
            android:background="@color/color_line_c3"/>

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="注册"
            android:id="@+id/reg_button_register"
            android:singleLine="false"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:background="@color/red"
            android:layout_marginLeft="40dp"/>

    </LinearLayout>
</LinearLayout>


