<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:background="@color/homepage_bg"
              tools:context=".activity.MainActivity"
              android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.27">

        <LinearLayout
            android:id="@+id/homepage_layout1"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_weight="0.5"
            android:gravity="center">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:id="@+id/home_sports"
                android:src="@drawable/sport_green"
                android:background="@color/homepage_bg"
                android:layout_weight="0.5"/>

            <TextView
                android:text="@string/sports"
                android:textSize="18dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_homepage_sports"
                android:layout_marginTop="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_weight="0.5"
            android:gravity="center">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:id="@+id/home_finance"
                android:src="@drawable/finance_red"
                android:background="@color/homepage_bg"
                android:layout_weight="0.5"/>

            <TextView
                android:text="@string/accounting"
                android:textSize="18dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_homepage_finance"
                android:layout_marginTop="10dp"/>
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_weight="0.5"
            android:gravity="center">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:id="@+id/home_transaction"
                android:src="@drawable/transaction_orange"
                android:background="@color/homepage_bg"
                android:layout_weight="0.50"/>

            <TextView
                android:text="@string/shedule"
                android:textSize="18dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_homepage_transaction"
                android:layout_marginTop="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_weight="0.5"
            android:gravity="center">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:id="@+id/home_communication"
                android:src="@drawable/communication_blue"
                android:background="@color/homepage_bg"
                android:layout_weight="0.50"/>

            <TextView
                android:text="@string/circle"
                android:textSize="18dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_homepage_community"
                android:layout_marginTop="10dp"/>

        </LinearLayout>
    </LinearLayout>
    <!--Toolbar-->
    <!--DrawerLayout-->
</LinearLayout>